@@ -1,6 +1,7 @@
 03Mar01=======================================================================
 1. allow incoming and outgoing IP connects direct to cluster.pl
 2. fixed (long standing)a hole in PC17 handling
+3. added winclient.pl (actually just a very basic client) from Iain G0RDI
 28Feb01=======================================================================
 1. allow sh/c gb7 (ie show the config of all gb7 nodes)(for example)
 2. get rid of spurious DXHash 'uninitialised' messages if no corresponding 
